fix(gui): enable 'follow active task' by default
Set autoFollow to true and followTargetId to 'active-task' so the GUI
auto-follows the active task when loading, providing a better default
experience.

Closes: bn-0a85

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -2502,8 +2502,8 @@
                 // Camera pan animation state
                 followAnimation: null,  // { startPanX, startPanY, targetPanX, targetPanY, startZoom, targetZoom, startTime, duration }
                 // Auto-follow state
-                autoFollow: false,  // Whether auto-follow is enabled
-                followTargetId: null,  // Target to follow: 'active-task', 'queue', or agent ID (e.g., 'bna-xxxx')
+                autoFollow: true,  // Whether auto-follow is enabled
+                followTargetId: 'active-task',  // Target to follow: 'active-task', 'queue', or agent ID (e.g., 'bna-xxxx')
                 followingNodeId: null,  // ID of node currently being followed (for continuous tracking)
                 // Stat highlight filter state (null = no filter active)
                 highlightFilter: null,  // e.g., 'bugs', 'blocked', 'ready', 'ideas', 'milestones'
