style(gui): darken edge type button background
Changed the active edge filter button background from #4a90e2 to #3a7bc8
for better visual contrast against the dark theme.

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -1168,7 +1168,7 @@
         }
 
         .edge-filter-btn.active {
-            background: var(--accent-blue);
+            background: #3a7bc8;  /* Darker blue than --accent-blue for better contrast */
             border-color: var(--accent-light);
             color: white;
         }
