feat(gui): make queue node more responsive with increased gravity
Queue nodes now have 3x gravity multiplier making them move more freely
toward the graph center. This gives them a 'lower mass' feel so they're
not stuck near their initial position.

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -4841,7 +4841,10 @@
                 const distance = Math.sqrt(dx * dx + dy * dy);
 
                 if (distance > 0) {
-                    const force = gravityStrength;
+                    // Queue nodes get stronger gravity (lower mass effect)
+                    // This makes them more responsive and less "heavy"
+                    const gravityMultiplier = node.type === 'queue' ? 3.0 : 1.0;
+                    const force = gravityStrength * gravityMultiplier;
                     node.vx += (dx / distance) * force;
                     node.vy += (dy / distance) * force;
                 }
