fix(gui): remove duplicate compass emoji from browser tab title
The compass emoji was appearing twice in browser tabs - once from the
favicon SVG and once from the dynamically set document.title. Since the
favicon already displays a compass, remove the emoji prefix from the
JavaScript that sets the title with the project name.

Fixes: bn-f28a

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -3155,7 +3155,7 @@
             
             // Update the document title with project name
             if (configData.project_name) {
-                document.title = `🧭 ${configData.project_name} - Binnacle`;
+                document.title = `${configData.project_name} - Binnacle`;
             }
             
             // Merge tasks, bugs, and ideas into unified tasks array for graph
