feat(gui): reposition edge/filter bar to right side below controls
Move the edge type and stats filter bar from top-left to below the
graph controls on the right side of the graph pane, improving visual
organization by grouping all control panels together.

Closes: bn-fb7d

Co-authored-by: binnacle-bot <noreply@binnacle.bot>

--- a/src/gui/index.html
+++ b/src/gui/index.html
@@ -1676,8 +1676,8 @@
 
         .graph-filters {
             position: absolute;
-            top: 1rem;
-            left: 1rem;
+            top: 4rem;
+            right: 1rem;
             background: var(--overlay-bg);
             border: 1px solid var(--border-color);
             border-radius: 6px;
@@ -1791,7 +1791,8 @@
         }
 
         #graph-view.fullscreen .graph-filters {
-            bottom: 1rem;
+            top: 4rem;
+            right: 1rem;
         }
 
         .maximize-btn {
@@ -2459,8 +2460,8 @@
                 align-items: stretch;
             }
             .graph-filters {
-                left: 1rem;
                 right: 1rem;
+                left: auto;
                 top: auto;
                 bottom: 1rem;
             }
